loan calculator by kelvin

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
   <!-- :: Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sacco's solution">
+  <meta name="description" content="sacco benki">
+  <meta name="description" content="sacco banking online services">
+  <meta name="description" content="sacco banking tools">
+  <meta name="description" content="the best sacco banking tool">
+ 
+  <meta name="description" content="sacco banking">
+  <meta name="description" content="sacco banking game changer">
+  <meta name="description" content="sacco banking made easy">
+  <meta name="description" content="sacco banking">
+
   <meta name="author" content="Nouveta LTD | Nouveta">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="theme-color" content="#0635c9">
-  <meta name="keywords" content="Sacco Benki">
+  <meta name="keywords" content="Sacco, banking, Nouveta, money, ushuru, loan, loan calculator, sacco app, kenya, africa,  revenuesure, reconmate,sacco benki, bank, finance, financial institution">
   <!-- icons -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css">
@@ -491,7 +500,8 @@ enables you to tell the story of your performance through charts and graphs and 
 					<div class="t-c">
 						<h3 class="mb-3">Customer's Self Service Portal</h3>
 						<p class="mb-3">Reduce unnecessary ques at your banking halls by making services rendered by your SACCO available on a web portal thats not only fast but secure and eay to use.</p>
-						<a href="#" class="text-capitalize d-none">visit website now<i class="fa fa-arrow-right ml-2"></i></a>
+            <a href="#" class="text-capitalize d-none">visit website now<i class="fa fa-arrow-right ml-2"></i></a>
+            
 					</div>
 				</div>
 			</div>
@@ -518,7 +528,8 @@ enables you to tell the story of your performance through charts and graphs and 
 						<p class="mb-3">
               With the help of this mobile app, customers can get real time notifications and still have access to the services offered by the sacco on the palm of their hand. With the app in place, your members can access services such as loan borrowing and fund deposits easily.
             </p>
-						<a href="#" class="text-capitalize">Mobile App features<i class="fa fa-arrow-right ml-2"></i></a>
+            <a href="#" class="text-capitalize d-none">Mobile App features<i class="fa fa-arrow-right ml-2"></i></a>
+            <a href="#" class="th-btn th-btn-outline-primary mx-2 my-2"><i class="mdi mdi-android-debug-bridge mr-2"></i>Check It Out</a>
 					</div>
 				</div>
 			</div>
@@ -551,7 +562,7 @@ enables you to tell the story of your performance through charts and graphs and 
               
 
               </p>
-              <a href="#" class="th-btn th-btn-outline-primary mt-5">Read more</a>
+              <a href="#" class="th-btn th-btn-outline-primary mt-5 d-none">Read more</a>
             </div>
           </div>
           <!-- col -->
@@ -562,7 +573,7 @@ enables you to tell the story of your performance through charts and graphs and 
               <div class="col-xl-4 col-md-3 col-sm-4 col-6 text-center">
                 <!-- box -->
                 <div class="box has-sm-shadow">
-                  <img src="./assets/images/icons/style-02/email-ser.svg" class="img-fluid mb-3" alt="image">
+                  <img src="./assets/images/icons/style-02/loan-growth.svg" class="img-fluid mb-3" alt="image">
                   <h5 class="name">Loan growth</h5>
                 </div>
               </div>
@@ -570,7 +581,7 @@ enables you to tell the story of your performance through charts and graphs and 
               <div class="col-xl-4 col-md-3 col-sm-4 col-6 text-center">
                 <!-- box -->
                 <div class="box has-sm-shadow">
-                  <img src="./assets/images/icons/style-02/dowload.svg" class="img-fluid mb-3" alt="image">
+                  <img src="./assets/images/icons/style-02/exclaim.svg" class="img-fluid mb-3" alt="image">
                   <h5 class="name">Delinquency</h5>
                 </div>
               </div>
@@ -578,7 +589,7 @@ enables you to tell the story of your performance through charts and graphs and 
               <div class="col-xl-4 col-md-3 col-sm-4 col-6 text-center">
                 <!-- box -->
                 <div class="box has-sm-shadow">
-                  <img src="./assets/images/icons/style-02/kid.svg" class="img-fluid mb-3" alt="image">
+                  <img src="./assets/images/icons/style-02/checklist.svg" class="img-fluid mb-3" alt="image">
                   <h5 class="name">Compliance & Risks</h5>
                 </div>
               </div>
@@ -586,7 +597,7 @@ enables you to tell the story of your performance through charts and graphs and 
               <div class="col-xl-4 col-md-3 col-sm-4 col-6 mb-sm-0 text-center">
                 <!-- box -->
                 <div class="box has-sm-shadow">
-                  <img src="./assets/images/icons/style-02/maintenance.svg" class="img-fluid mb-3" alt="image">
+                  <img src="./assets/images/icons/style-02/intrests.svg" class="img-fluid mb-3" alt="image">
                   <h5 class="name">Interest Income</h5>
                 </div>
               </div>
@@ -594,7 +605,7 @@ enables you to tell the story of your performance through charts and graphs and 
               <div class="col-xl-4 col-md-3 col-sm-4 col-6 mb-0 text-center">
                 <!-- box -->
                 <div class="box has-sm-shadow">
-                  <img src="./assets/images/icons/style-02/music-player.svg" class="img-fluid mb-3" alt="image">
+                  <img src="./assets/images/icons/style-02/members.svg" class="img-fluid mb-3" alt="image">
                   <h5 class="name">Number of customers</h5>
                 </div>
               </div>
@@ -602,7 +613,7 @@ enables you to tell the story of your performance through charts and graphs and 
               <div class="col-xl-4 col-md-3 col-sm-4 col-6 mb-0 text-center">
                 <!-- box -->
                 <div class="box has-sm-shadow">
-                  <img src="./assets/images/icons/style-02/trophy.svg" class="img-fluid mb-3" alt="image">
+                  <img src="./assets/images/icons/style-02/portfolio.svg" class="img-fluid mb-3" alt="image">
                   <h5 class="name">Portfolios</h5>
                 </div>
               </div>
@@ -859,7 +870,20 @@ enables you to tell the story of your performance through charts and graphs and 
   <script src="./assets/js/lib/bootstrap.min.js"></script>
   <script src="./assets/js/lib/owl.js"></script>
   <script src="./assets/js/lib/wow.js"></script>
-  <script src="./assets/js/lib/jquery.scrollTo.js"></script>
+  <script src="./assets/js/lib/jquery.localScroll.min.js"></script>
   <script src="./assets/js/theme/theme.js"></script>
+
+  <script>
+    $(document).ready(function(){
+    // alert("we giood");
+    $('#contacts').localScroll();
+    $('#billing').localScroll();
+    $('#modules').localScroll();
+    $('#monitoring').localScroll();
+    $('#sacco-benefits').localScroll();
+    $('#features').localScroll();
+    $('#home').localScroll();
+  });
+  </script>
 </body>
 </html>
