kelvin:the email

--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                             <li class="title text-uppercase mb-3">Contacts</li>
                             <li class="d-none"><a href="tel:+254-759-067-452" class="text-capitalize">+254-759-067-452</a></li>
                             <li><a href="tel:+254-774-387-419" class="text-capitalize">+254-774-387-419</a></li>
-                            <li><a href="mailto:info@nouveta.tech" class="text-capitalize">info@nouveta.tech</a></li>
+                            <li><a href="mailto:contact@saccobenki.co.ke" class="text-capitalize">contact@saccobenki.co.ke</a></li>
                             <li><a href="https://nouveta.tech/" target="new" class="text-capitalize">company's Website</a></li>
                         </ul>
                     </div>
@@ -900,7 +900,7 @@
                 <div class="row">
                     <a class="d-none" href="https://nouveta.tech/" target="new" title="Visit our website"><img src="./assets/images/nouveta/footer.svg" class="opacity-5"></a>
                     <div class="col">
-                        <p class="mb-0 pb-0">&copy; Copyright <strong class="the-year">2020</strong>, Nouveta LTD</p>
+                        <p class="mb-0 pb-0">&copy; Copyright <strong class="the-year">2020</strong>, Sacco Benki</p>
 
                     </div>
                 </div>
