kelvin:Global site tag

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <meta name="keywords" content="Sacco, banking, Nouveta, money, ushuru, loan, loan calculator, sacco app, kenya, africa,  revenuesure, reconmate,sacco benki, bank, finance, financial institution">
     <!-- icons -->
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-08CD1SPMTH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-08CD1SPMTH');
+    </script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css">
     <!-- :: Stylesheet -->
     <link rel="stylesheet" href="./assets/css/lib/bootstrap.css">
